full-moon/tests/cases/fail/parser/local-assignment-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/local-assignment-4
---
error[ast]: unexpected token `end`. end (expected either a variable name or `function`)
  ┌─ source.lua:1:7
  │
1 │ local end
  │       ^^^

error[ast]: unexpected token `end`. end (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:7
  │
1 │ local end
  │       ^^^


